src/objects/DataFixManager__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DataFix実施結果記録</description>
    <fields>
        <fullName>LeadFixed1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約情報の検索キーを設定済み・未設定識別フラグ</inlineHelpText>
        <label>予約更新済み(NEW)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約情報の検索キーを設定済み・未設定識別フラグ</inlineHelpText>
        <label>予約更新済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadUpdateFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約検索キーデータ設定処理中識別フラグ</inlineHelpText>
        <label>予約更新中</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomsStatusFixed1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>部屋状態管理のインデックス設定済み</inlineHelpText>
        <label>部屋状態管理更新済み(New)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomsStatusFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>部屋状態管理のインデックス設定済み</inlineHelpText>
        <label>部屋状態管理更新済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StockChangeHisotryFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>StockChangeHisotryDataFixBatchバッチ実施結果の記録</inlineHelpText>
        <label>在庫変更履歴更新済み</label>
        <type>Checkbox</type>
    </fields>
    <label>データ状態定義</label>
</CustomObject>